--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>简介</h1>
+								<p>这个网址主要用于记录我的学习生活经历，我： <a href="https://html5up.net">湛志威</a> ，热爱学习<br />学习伴我成长，欢迎来
+								 <a href="https://user.qzone.qq.com/2629022618/infocenter">我的QQ空间</a> 留言，有事请联系qq：2629022618.</p>
 							</div>
 						</div>
 						<nav>
