--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#intro">学习</a></li>
+								<li><a href="#work">生活</a></li>
+								<li><a href="#about">玩耍</a></li>
+								<li><a href="#contact">联系我</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
