--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>简介</h1>
-								<p>这个网址主要用于记录我的学习生活经历，我：湛志威 ，热爱学习<br />学习伴我成长，欢迎来
+								<p>这个网址主要用于记录我的学习生活经历，我 ，热爱学习<br />学习伴我成长，欢迎来
 								 <a href="https://user.qzone.qq.com/2629022618/infocenter">我的QQ空间</a> 留言，有事请联系qq：2629022618.</p>
 							</div>
 						</div>
@@ -47,22 +47,23 @@
 							<article id="intro">
 								<h2 class="major">学习</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>一学年的学习任务又已接近尾声，默然回首，这一年来虽没有轰轰烈烈的战果，但在潜移默化中仍取得了许多不可磨灭的成绩。为了发扬成绩，弥补不足，以利于今后的工作和学习，特自我鉴定如下：</p>
-								<p>从xxxx年入校就读以来，一直以严谨的态度和满腔的热情投身于学习中，虽然有成功的喜悦，但也有失败的辛酸。然而日益激烈竟争的社会也使我充分地认识到：成为一名德智体美劳全面发展的优秀大学生的重要性。因此，我仍然孜孜不倦，不断地挑战自我，充实自己，为实现人生的价值打下坚实的基础。</p>
+								<p>莫等闲，白了少年头，空悲切。——岳飞</p>
+								<p>“You can overcome anything, if and only if you love something enough.”（你可以克服任何事情，如果且只要你夠熱愛一件事。）— Lionel Messi, Soccer Player</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">生活</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>大学生自我鉴定光阴似箭，一晃一年的大学生活过去了。我从XXXX年进入某学校就读以来， 一直一严谨的态度和积极的热情投身于学习和工作中，虽然有成功的泪水，也有失败的 辛酸，然而日益激烈的社会竟争也使我充分地认识到成为一名德智体全面发展的优秀 大学生的重要性。无论如何，过去的是我不断奋斗、不断完善自我的一年。</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>生活最沉重的负担不是工作，而是无聊。——罗曼 罗兰</p>
+								<p>Cease to struggle and you cease to live.（生命不止,奋斗不息）——Thomas Carlyle</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">玩耍</h2>
-								<span class="image main"><img src="https://images.unsplash.com/photo-1598944633002-0432ec6e3181?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3841&q=80 3841w" alt="" /></span>
+								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<p>只会学习不会玩,聪明的孩子也变傻。玩就好好的玩玩是人生最大的乐趣。</p>
 								<p>玩得开心，过得愉快！</p>
 							</article>
 
