--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">学习</a></li>
-								<li><a href="#work">生活</a></li>
-								<li><a href="#about">玩耍</a></li>
-								<li><a href="#contact">联系我</a></li>
+								<li><a href="study">学习</a></li>
+								<li><a href="life">生活</a></li>
+								<li><a href="play">玩耍</a></li>
+								<li><a href="contact">联系我</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -70,7 +70,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">联系我</h2>
-								<form method="post" action="#">
+								<form method="post" action="weiegjt@qq.com">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">姓名</label>
