--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 								</form>
 								<ul class="icons">
 									<li><a href="https://twitter.com/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://zh-cn.facebook.com/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/weigez11" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									
 								</ul>
