--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">学习</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic1_01.jpg" alt="" /></span>
 								<p>莫等闲，白了少年头，空悲切。——岳飞</p>
+								<span class="image main"><img src="images/pic1_02.jpg" alt="" /></span>
 								<p>“You can overcome anything, if and only if you love something enough.”（你可以克服任何事情，如果且只要你夠熱愛一件事。）— Lionel Messi, Soccer Player</p>
 							</article>
 
