--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">生活</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic2_01.jpg" alt="" /></span>
 								<p>生活最沉重的负担不是工作，而是无聊。——罗曼 罗兰</p>
+								<span class="image main"><img src="images/pic2_02.jpg" alt="" /></span>
 								<p>Cease to struggle and you cease to live.（生命不止,奋斗不息）——Thomas Carlyle</p>
 							</article>
 
