--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">玩耍</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic3_01.jpg" alt="" /></span>
 								<p>只会学习不会玩,聪明的孩子也变傻。玩就好好的玩玩是人生最大的乐趣。</p>
+								<span class="image main"><img src="images/pic3_02.jpg" alt="" /></span>
 								<p>玩得开心，过得愉快！</p>
 							</article>
 
