--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>简介</h1>
-								<p>这个网址主要用于记录我的学习生活经历感悟，我 ，热爱学习</p>
-								<p>学习伴我成长，欢迎来 <a href="https://user.qzone.qq.com/2629022618/infocenter">我的QQ空间</a> 留言，有事请联系qq：2629022618.</p>
+								<p>这个网址主要用于记录我的学习生活经历感悟，我爱学习<br />学习伴我成长，欢迎来 <a href="https://user.qzone.qq.com/2629022618/infocenter">我QQ空间</a> 留言<br />有事请联系qq：2629022618.</p>
 							</div>
 						</div>
 						<nav>
@@ -349,6 +348,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
+						<span id="runtime_span">网站已在风雨中运行:1天0小时0分0秒</span><script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new Date("12/21/2022 19:12:50");Y=new Date();T=(Y.getTime()-X.getTime());M=24*60*60*1000;a=T/M;A=Math.floor(a);b=(a-A)*24;B=Math.floor(b);c=(b-B)*60;C=Math.floor((b-B)*60);D=Math.floor((c-C)*60);runtime_span.innerHTML="网站已在风雨中运行:"+A+"天"+B+"小时"+C+"分"+D+"秒"}show_runtime();</script>
 						<p class="copyright">&copy; WeigeJt SY_L Design.</p>
 					</footer>
 
