--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; id="runtime_span">Running Time:1day0hour0min0sec</span><script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new Date("12/21/2022 19:12:50");Y=new Date();T=(Y.getTime()-X.getTime());M=24*60*60*1000;a=T/M;A=Math.floor(a);b=(a-A)*24;B=Math.floor(b);c=(b-B)*60;C=Math.floor((b-B)*60);D=Math.floor((c-C)*60);runtime_span.innerHTML="Running Time:"+A+"day"+B+"hour"+C+"min"+D+"sec"}show_runtime();</script>
+						<span class="copyright">Running Time:1day0hour0min0sec</span><script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new Date("12/21/2022 19:12:50");Y=new Date();T=(Y.getTime()-X.getTime());M=24*60*60*1000;a=T/M;A=Math.floor(a);b=(a-A)*24;B=Math.floor(b);c=(b-B)*60;C=Math.floor((b-B)*60);D=Math.floor((c-C)*60);runtime_span.innerHTML="Running Time:"+A+"day"+B+"hour"+C+"min"+D+"sec"}show_runtime();</script>
 						<p class="copyright">&copy; WeigeJt SY_L Design.</p>
 					</footer>
 
