--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
 						<div class="logo">
 							<span class="icon fa-gem"></span>
 						</div>
+						<div class="report">
+							<script>
+								var weekDayLabels = new Array("星期日","星期一","星期二","星期三","星期四","星期五","星期六");
+								var now = new Date();
+								var year=now.getFullYear();
+								var month=now.getMonth()+1;
+								var day=now.getDate()
+								var currentime = '<span class="special">'+year+'年'+month+'月'+day+'日                '+weekDayLabels[now.getDay()]+'</span><br>'
+								document.write(currentime)
+							</script>
+							</div>
 						<div class="content">
 							<div class="inner">
 								<h1>简介</h1>
