--- a/index.html
+++ b/index.html
@@ -351,12 +351,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<footer id="footer">
 						<div class="report">
 								<script>
-									var weekDayLabels = new Array("星期日","星期一","星期二","星期三","星期四","星期五","星期六");
+									var weekDayLabels = new Array("Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday");
 									var now = new Date();
 									var year=now.getFullYear();
 									var month=now.getMonth()+1;
 									var day=now.getDate()
-									var currentime = '<span class="special">'+year+'年'+month+'月'+day+'日                '+weekDayLabels[now.getDay()]+'</span><br>'
+									var currentime = '<span class="special">'+year+'year'+mon+'month'+day+'day                '+weekDayLabels[now.getDay()]+'</span><br>'
 									document.write(currentime)
 								</script>
 								</div>
