--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									var year=now.getFullYear();
 									var month=now.getMonth()+1;
 									var day=now.getDate()
-									var currentime = '<span class="special">'+year+'year'+mon+'month'+day+'day                '+weekDayLabels[now.getDay()]+'</span><br>'
+									var currentime = '<span class="special">'+'CURRent TIME:'+year+'year'+mon+'month'+day+'day                '+weekDayLabels[now.getDay()]+'</span><br>'
 									document.write(currentime)
 								</script>
 								</div>
