--- a/index.html
+++ b/index.html
@@ -349,17 +349,15 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<div class="report">
-								<script>
-									var weekDayLabels = new Array("Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday");
-									var now = new Date();
-									var year=now.getFullYear();
-									var month=now.getMonth()+1;
-									var day=now.getDate()
-									var currentime = '<span class="special">'+'CURRent TIME:'+year+'year'+mon+'month'+day+'day                '+weekDayLabels[now.getDay()]+'</span><br>'
-									document.write(currentime)
-								</script>
-								</div>
+						<script>
+							var weekDayLabels = new Array("Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday");
+							var now = new Date();
+							var year=now.getFullYear();
+							var month=now.getMonth()+1;
+							var day=now.getDate()
+							var currentime = '<span class="special">'+'CURRENT TIME:'+year+'year'+mon+'month'+day+'day                '+weekDayLabels[now.getDay()]+'</span><br>'
+							document.write(currentime)
+						</script>
 						<span id="runtime_span">Running Time: 0 day 0 hour 0 min 0 min 0 sec</span><script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new Date("12/21/2022 21:00:00");Y=new Date();T=(Y.getTime()-X.getTime());M=24*60*60*1000;a=T/M;A=Math.floor(a);b=(a-A)*24;B=Math.floor(b);c=(b-B)*60;C=Math.floor((b-B)*60);D=Math.floor((c-C)*60);runtime_span.innerHTML="RUNNING TIME: "+A+" DAY "+B+" HOUR "+C+" MIN "+D+" SEC"}show_runtime();</script>
 						<p class="copyright">&copy; WeigeJt SY_L Design.</p>
 					</footer>
