--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span id="time"> CURRENT TIME: <!-- 在这里显示当前时间 --> </span>
+						<span id="time"> &#9786;CURRENT TIME: <!-- 在这里显示当前时间 --> </span>
 						<br>	
-						<span id="runtime_span">Running Time: 0 day 0 hour 0 min 0 min 0 sec</span><script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new Date("12/21/2022 21:00:00");Y=new Date();T=(Y.getTime()-X.getTime());M=24*60*60*1000;a=T/M;A=Math.floor(a);b=(a-A)*24;B=Math.floor(b);c=(b-B)*60;C=Math.floor((b-B)*60);D=Math.floor((c-C)*60);runtime_span.innerHTML="RUNNING TIME: "+A+" DAY "+B+" HOUR "+C+" MIN "+D+" SEC"}show_runtime();</script>
+						<span id="runtime_span">Running Time: 0 day 0 hour 0 min 0 min 0 sec</span><script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new Date("12/21/2022 21:00:00");Y=new Date();T=(Y.getTime()-X.getTime());M=24*60*60*1000;a=T/M;A=Math.floor(a);b=(a-A)*24;B=Math.floor(b);c=(b-B)*60;C=Math.floor((b-B)*60);D=Math.floor((c-C)*60);runtime_span.innerHTML="&#9786;RUNNING TIME: "+A+" DAY "+B+" HOUR "+C+" MIN "+D+" SEC"}show_runtime();</script>
 						<p class="copyright">&copy; WeigeJt SY_L Design.</p>
 					</footer>
 
@@ -379,7 +379,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		      // 将当前时间转换为字符串
 		      var currentTimeString = currentTime.toLocaleString();
 		      // 在时间元素中显示当前时间
-		      timeElement.innerHTML = "CURRENT TIME: " + currentTimeString;
+		      timeElement.innerHTML = "&#9786;CURRENT TIME: " + currentTimeString;
 		    }
 
 		    // 使用 setInterval 函数每秒调用 updateTime 函数一次
