--- a/index.html
+++ b/index.html
@@ -349,6 +349,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
+						<span> <img src="http://www.cxyax.com/ipcard/"/> </span>
 						<span id="time"> &#9786;CURRENT TIME: <!-- 在这里显示当前时间 --> </span>
 						<br>	
 						<span id="runtime_span">Running Time: 0 day 0 hour 0 min 0 min 0 sec</span><script type="text/javascript">function show_runtime(){window.setTimeout("show_runtime()",1000);X=new Date("12/21/2022 21:00:00");Y=new Date();T=(Y.getTime()-X.getTime());M=24*60*60*1000;a=T/M;A=Math.floor(a);b=(a-A)*24;B=Math.floor(b);c=(b-B)*60;C=Math.floor((b-B)*60);D=Math.floor((c-C)*60);runtime_span.innerHTML="&#9786;RUNNING TIME: "+A+" DAY "+B+" HOUR "+C+" MIN "+D+" SEC"}show_runtime();</script>
