--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<article id="intro">
 								<h2 class="major">学习</h2>
 								<h3>寒假学习目标：</h3>
-								<p>1、51单片机入门教程江科协的看完并真正理解并能应用<br>2、SolidWorks学习，能够做出一个有难度的物体出来<br>3、学英语，坚持记单词，做试卷，听听力，争取能听懂YouTube上的英文教学视频</p>
+								<p>1、51单片机入门教程江科协的看完并真正理解并能应用；<br>2、SolidWorks学习，能够做出一个有难度的物体出来；<br>3、学英语，坚持记单词，做试卷，听听力，争取能听懂YouTube上的英文教学视频。</p>
 								<span class="image main"><img src="images/pic1_01.jpg" alt="" /></span>
 								<p>莫等闲，白了少年头，空悲切。——<a href="https://baike.baidu.com/item/%E5%B2%B3%E9%A3%9E/127844" target="_blank">岳飞</a></p>
 								<span class="image main"><img src="images/pic1_02.jpg" alt="" /></span>
