--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<!-- Footer -->
 					<footer id="footer">
 						<h4><span>IP地址</span></h4>
-						<span> <img src="http://www.cxyax.com/ipcard/"/> </span>
+						<span> <img style="max-width:100%;overflow:hidden;" src="http://www.cxyax.com/ipcard/" alt=""> </span>
 						<br>
 						<span id="time"> &#9786;CURRENT TIME: <!-- 在这里显示当前时间 --> </span>
 						<br>	
