--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<nav>
 							<ul>	
 								<li><a href="#timeline">时间轴</a></li>
-								<li><a href="#intro">学习</a></li>
+								<li><a href="#study">学习</a></li>
 								<li><a href="#work">生活</a></li>
 								<li><a href="#about">玩耍</a></li>
 								<li><a href="#contact">联系我</a></li>
@@ -51,8 +51,8 @@
 								<p>“You can overcome anything, if and only if you love something enough.”（你可以克服任何事情，如果且只要你夠熱愛一件事。）— <a href="https://baike.baidu.com/item/%E5%88%A9%E6%98%82%E5%86%85%E5%B0%94%C2%B7%E6%A2%85%E8%A5%BF/3965248" target="_blank">Lionel Messi</a>, Soccer Player</p>
 							</article>
 						
-						<!-- Intro -->
-							<article id="intro">
+						<!-- Study -->
+							<article id="study">
 								<h2 class="major">学习</h2>
 								<h3>寒假学习目标：</h3>
 								<p>1、51单片机入门教程江科协的看完并真正理解并能应用；<br>2、SolidWorks学习，能够做出一个有难度的物体出来；<br>3、学英语，坚持记单词，做试卷，听听力，争取能听懂YouTube上的英文教学视频。</p>
