--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 							<ul>	
 								<li><a href="#timeline">时间轴</a></li>
 								<li><a href="#study">学习</a></li>
-								<li><a href="#work">生活</a></li>
-								<li><a href="#about">玩耍</a></li>
+								<li><a href="#life">生活</a></li>
+								<li><a href="#play">玩耍</a></li>
 								<li><a href="#contact">联系我</a></li>
 								
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -62,8 +62,8 @@
 								<p>“You can overcome anything, if and only if you love something enough.”（你可以克服任何事情，如果且只要你夠熱愛一件事。）— <a href="https://baike.baidu.com/item/%E5%88%A9%E6%98%82%E5%86%85%E5%B0%94%C2%B7%E6%A2%85%E8%A5%BF/3965248" target="_blank">Lionel Messi</a>, Soccer Player</p>
 							</article>
 
-						<!-- Work -->
-							<article id="work">
+						<!-- Life -->
+							<article id="life">
 								<h2 class="major">生活</h2>
 								<span class="image main"><img src="images/pic2_01.jpg" alt="" /></span>
 								<p>生活最沉重的负担不是工作，而是无聊。——<a href="https://baike.baidu.com/item/%E7%BD%97%E6%9B%BC%C2%B7%E7%BD%97%E5%85%B0/802941" target="_blank">Romain Rolland</a></p>
@@ -71,8 +71,8 @@
 								<p>Cease to struggle and you cease to live.（生命不止,奋斗不息）——<a href="https://baike.baidu.com/item/%E6%89%98%E9%A9%AC%E6%96%AF%C2%B7%E5%8D%A1%E8%8E%B1%E5%B0%94/11029383" target="_blank">Thomas Carlyle</a></p>
 							</article>
 
-						<!-- About -->
-							<article id="about">
+						<!-- Play -->
+							<article id="play">
 								<h2 class="major">玩耍</h2>
 								<span class="image main"><img src="images/pic3_01.jpg" alt="" /></span>
 								<p>只会学习不会玩,聪明的孩子也变傻。玩就好好的玩玩是人生最大的乐趣。</p>
