--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
 						
 						<!-- Timeline -->
 							<article id="timeline">
-								<h2 class="major">=时间轴</h2>
-								<p>1、51单片机入门教程江科协的看完并真正理解并能应用；<br>2、SolidWorks学习，能够做出一个有难度的物体出来；<br>3、学英语，坚持记单词，做试卷，听听力，争取能听懂YouTube上的英文教学视频。</p>
-								<span class="image main"><img src="images/pic1_01.jpg" alt="" /></span>
+								<h2 class="major">=时间轴</h2>				
+								<span class="image main"><img src="images/timeline_01.png" alt="" /></span>
 								<p>莫等闲，白了少年头，空悲切。——<a href="https://baike.baidu.com/item/%E5%B2%B3%E9%A3%9E/127844" target="_blank">岳飞</a></p>
 								<span class="image main"><img src="images/pic1_02.jpg" alt="" /></span>
 								<p>“You can overcome anything, if and only if you love something enough.”（你可以克服任何事情，如果且只要你夠熱愛一件事。）— <a href="https://baike.baidu.com/item/%E5%88%A9%E6%98%82%E5%86%85%E5%B0%94%C2%B7%E6%A2%85%E8%A5%BF/3965248" target="_blank">Lionel Messi</a>, Soccer Player</p>
