--- a/index.html
+++ b/index.html
@@ -46,12 +46,8 @@
 								<h2 class="major">=时间轴</h2>
 								<h4> Blog Post 1</h4>
           							<p><small > Posted on December 28, 2022</small></p>
-								<p>这是我第一个完整的建一个3维模型，耗时22个小时，虽然花了这么长的时间，但是通过这次练习，我深刻体会到了用SolidWorks建模的精髓了，同时也较为熟练的掌握了SolidWorks软件的使用，总结了许多技巧与不足。最后，我想说的是，英语是真的重要，所以以后我会更多地听英文教程，一边学习，一边提高英语水平。</p>
-								<div class="mainPro-img">
-     									<img class="qqq" src="images/timeline_01.png" alt="" style="width: 100%;">
- 								</div>
-								<br>	
-								<span class="image main"><img src="images/timeline_01.png" alt="" /></span>
+								<p>这是我第一个完整的建一个3维模型，耗时22个小时，虽然花了这么长的时间，但是通过这次练习，我深刻体会到了用SolidWorks建模的精髓了，同时也较为熟练的掌握了SolidWorks软件的使用，总结了许多技巧与不足。最后，我想说的是，英语是真的重要，所以以后我会更多地听英文教程，一边学习，一边提高英语水平。</p>	
+								<span class="image main"><img src="images/timeline_01.png" alt="" style="width: 100%;"/></span>
 							</article>
 						
 						<!-- Study -->
@@ -59,27 +55,27 @@
 								<h2 class="major">学习</h2>
 								<h3>寒假学习目标：</h3>
 								<p>1、51单片机入门教程江科协的看完并真正理解并能应用；<br>2、SolidWorks学习，能够做出一个有难度的物体出来；<br>3、学英语，坚持记单词，做试卷，听听力，争取能听懂YouTube上的英文教学视频。</p>
-								<span class="image main"><img src="images/pic1_01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic1_01.jpg" alt="" style="width: 100%;"/></span>
 								<p>莫等闲，白了少年头，空悲切。——<a href="https://baike.baidu.com/item/%E5%B2%B3%E9%A3%9E/127844" target="_blank">岳飞</a></p>
-								<span class="image main"><img src="images/pic1_02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic1_02.jpg" alt="" style="width: 100%;"/></span>
 								<p>“You can overcome anything, if and only if you love something enough.”（你可以克服任何事情，如果且只要你夠熱愛一件事。）— <a href="https://baike.baidu.com/item/%E5%88%A9%E6%98%82%E5%86%85%E5%B0%94%C2%B7%E6%A2%85%E8%A5%BF/3965248" target="_blank">Lionel Messi</a>, Soccer Player</p>
 							</article>
 
 						<!-- Life -->
 							<article id="life">
 								<h2 class="major">生活</h2>
-								<span class="image main"><img src="images/pic2_01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic2_01.jpg" alt="" style="width: 100%;"/></span>
 								<p>生活最沉重的负担不是工作，而是无聊。——<a href="https://baike.baidu.com/item/%E7%BD%97%E6%9B%BC%C2%B7%E7%BD%97%E5%85%B0/802941" target="_blank">Romain Rolland</a></p>
-								<span class="image main"><img src="images/pic2_02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic2_02.jpg" alt="" style="width: 100%;"/></span>
 								<p>Cease to struggle and you cease to live.（生命不止,奋斗不息）——<a href="https://baike.baidu.com/item/%E6%89%98%E9%A9%AC%E6%96%AF%C2%B7%E5%8D%A1%E8%8E%B1%E5%B0%94/11029383" target="_blank">Thomas Carlyle</a></p>
 							</article>
 
 						<!-- Play -->
 							<article id="play">
 								<h2 class="major">玩耍</h2>
-								<span class="image main"><img src="images/pic3_01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic3_01.jpg" alt="" style="width: 100%;"/></span>
 								<p>只会学习不会玩,聪明的孩子也变傻。玩就好好的玩玩是人生最大的乐趣。</p>
-								<span class="image main"><img src="images/pic3_02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/pic3_02.jpg" alt="" style="width: 100%;"/></span>
 								<p>玩得开心，过得愉快！</p>
 							</article>
 
