--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>简介</h1>
-								<p>这个网址主要用于记录我的学习生活经历感悟，我爱学习<br />学习伴我成长，欢迎来 <a href="https://user.qzone.qq.com/2629022618/infocenter" target="_blank">我QQ空间</a> 留言<br />有事请联系qq：2629022618.</p>
+								<h4>记录学习生活经历感悟</h4>
+								<p style="font-size:20px">我们若要生活，就该为自己建造一种充满感受、思索和行动的时钟，用它来代替这个枯燥、单调、以愁闷来扼杀心灵，带有责备意味和冷冷地滴答着的时间。--<a href="https://baike.baidu.com/item/%E5%88%A9%E6%98%82%E5%86%85%E5%B0%94%C2%B7%E6%A2%85%E8%A5%BF/3965248" target="_blank">Maxim Gorky</a></p>
 							</div>
 						</div>
 						<nav>
@@ -56,18 +57,18 @@
 								<h3>寒假学习目标：</h3>
 								<p>1、51单片机入门教程江科协的看完并真正理解并能应用；<br>2、SolidWorks学习，能够做出一个有难度的物体出来；<br>3、学英语，坚持记单词，做试卷，听听力，争取能听懂YouTube上的英文教学视频。</p>
 								<span class="image main"><img src="images/pic1_01.jpg" alt="" style="width: 100%;"/></span>
-								<p>莫等闲，白了少年头，空悲切。——<a href="https://baike.baidu.com/item/%E5%B2%B3%E9%A3%9E/127844" target="_blank">岳飞</a></p>
+								<p>莫等闲，白了少年头，空悲切。--<a href="https://baike.baidu.com/item/%E5%B2%B3%E9%A3%9E/127844" target="_blank">岳飞</a></p>
 								<span class="image main"><img src="images/pic1_02.jpg" alt="" style="width: 100%;"/></span>
-								<p>“You can overcome anything, if and only if you love something enough.”（你可以克服任何事情，如果且只要你夠熱愛一件事。）— <a href="https://baike.baidu.com/item/%E5%88%A9%E6%98%82%E5%86%85%E5%B0%94%C2%B7%E6%A2%85%E8%A5%BF/3965248" target="_blank">Lionel Messi</a>, Soccer Player</p>
+								<p>“You can overcome anything, if and only if you love something enough.”（你可以克服任何事情，如果且只要你夠熱愛一件事。）--<a href="https://baike.baidu.com/item/%E5%88%A9%E6%98%82%E5%86%85%E5%B0%94%C2%B7%E6%A2%85%E8%A5%BF/3965248" target="_blank">Lionel Messi</a>, Soccer Player</p>
 							</article>
 
 						<!-- Life -->
 							<article id="life">
 								<h2 class="major">生活</h2>
 								<span class="image main"><img src="images/pic2_01.jpg" alt="" style="width: 100%;"/></span>
-								<p>生活最沉重的负担不是工作，而是无聊。——<a href="https://baike.baidu.com/item/%E7%BD%97%E6%9B%BC%C2%B7%E7%BD%97%E5%85%B0/802941" target="_blank">Romain Rolland</a></p>
+								<p>生活最沉重的负担不是工作，而是无聊。--<a href="https://baike.baidu.com/item/%E7%BD%97%E6%9B%BC%C2%B7%E7%BD%97%E5%85%B0/802941" target="_blank">Romain Rolland</a></p>
 								<span class="image main"><img src="images/pic2_02.jpg" alt="" style="width: 100%;"/></span>
-								<p>Cease to struggle and you cease to live.（生命不止,奋斗不息）——<a href="https://baike.baidu.com/item/%E6%89%98%E9%A9%AC%E6%96%AF%C2%B7%E5%8D%A1%E8%8E%B1%E5%B0%94/11029383" target="_blank">Thomas Carlyle</a></p>
+								<p>Cease to struggle and you cease to live.（生命不止,奋斗不息）--<a href="https://baike.baidu.com/item/%E6%89%98%E9%A9%AC%E6%96%AF%C2%B7%E5%8D%A1%E8%8E%B1%E5%B0%94/11029383" target="_blank">Thomas Carlyle</a></p>
 							</article>
 
 						<!-- Play -->
