--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
 			
 			// 网页右下角展示一些icon
 			<div style="position: fixed; bottom: 0; right: 0;">
+				<a href="https://twitter.com/" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
+				<a href="https://zh-cn.facebook.com/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+				<a href="https://www.instagram.com/" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
 				<a href="https://github.com/weigez11" class="icon brands fa-github"><span class="label">GitHub</span></a>
 			</div>
 
