--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							</article>
 			</div>
 			
-			// 网页右下角展示一些icon
+			<!-- 网页右下角展示一些icon -->
 			<div style="position: fixed; bottom: 0; right: 0;">
 				<a href="https://twitter.com/" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
 				<a href="https://zh-cn.facebook.com/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
