--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
 			<!-- 网页右下角展示一些icon -->
 				
 			<div style="position: fixed; bottom: 0; right: 0;">
-				<a href="https://www.facebook.com/" target="_blank">
- 					<img src="images/icon_pics/facebook.png" alt="Facebook icon" style="margin-right: 17px;">
+				<a href="https://www.facebook.com/">
+ 					<img src="images/icon_pics/facebook.png" alt="Facebook icon" style="margin-right: 15px;">
 				</a>
-				<a href="https://github.com/weigez11" target="_blank">
-			  		<img src="images/icon_pics/github.png" alt="GitHub icon" style="margin-right: 17px;>
+				<a href="https://www.instagram.com/">
+			  		<img src="images/icon_pics/instagram.png" alt="Instagram icon" style="margin-right: 15px;>
 				</a>
-				<a href="https://www.instagram.com/" target="_blank">
-			  		<img src="images/icon_pics/instagram.png" alt="Instagram icon" style="margin-right: 17px;>
+				<a href="https://twitter.com/">
+			  		<img src="images/icon_pics/twitter.png" alt="Twitter icon" style="margin-right: 15px;>
 				</a>
-				<a href="https://github.com/weigez11" target="_blank">
-			  		<img src="images/icon_pics/twitter.png" alt="Twitter icon" style="margin-right: 17px;>
+				<a href="https://github.com/weigez11">
+			  		<img src="images/icon_pics/github.png" alt="GitHub icon" style="margin-right: 15px;>
 				</a>
 														
 			</div>
