--- a/index.html
+++ b/index.html
@@ -107,16 +107,17 @@
 									
 								</ul>
 							</article>
+					</div>	
 					</div>
 			
 				<!-- 网页右下角展示一些icon -->
 				
 				<div style="position: fixed; bottom: 0; right: 0;">
-					<a href="https://www.facebook.com/">
- 						<img src="images/icon_pics/facebook.png" alt="Facebook icon" style="margin-right: 15px;">
-					</a>
 					<a href="https://www.instagram.com/">
 			  			<img src="images/icon_pics/instagram.png" alt="Instagram icon" style="margin-right: 15px;>
+					</a>
+					<a href="https://www.facebook.com/">
+ 						<img src="images/icon_pics/facebook.png" alt="Facebook icon" style="margin-right: 15px;">
 					</a>
 					<a href="https://twitter.com/">
 			  			<img src="images/icon_pics/twitter.png" alt="Twitter icon" style="margin-right: 15px;>
