--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
 								</ul>
 							</article>
 					</div>	
+				<div style="position: fixed; bottom: 0; right: 0;">
+  					<a href="images/icon_pics/facebook.png" target="_blank">
+    						<img src="" alt="Facebook icon">
+  					</a>
+				</div>
+
 														
 
 				<!-- Footer -->
