--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
   					<a href="images/icon_pics/facebook.png" target="_blank">
     						<img src="" alt="Facebook icon">
   					</a>
+					<a href="images/icon_pics/github.png" target="_blank">
+    						<img src=""">
+  					</a>
+					<a href="images/icon_pics/facebook.png" target="_blank"></a>
+					<a href="https://github.com/weigez11" class="icon brands fa-github"><span class="label">GitHub</span></a>
 				</div>
 
 														
