--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     						<img src=""">
   					</a>
 					<a href="images/icon_pics/facebook.png" target="_blank"></a>
+					<a href="https://github.com/weigez11" <img src="images/icon_pics/github.png"></a>
 					<a href="https://github.com/weigez11" class="icon brands fa-github"><span class="label">GitHub</span></a>
 				</div>
 
