--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 					</div>	
 				<div style="position: fixed; bottom: 0; right: 0;">
   					<a href="images/icon_pics/facebook.png" target="_blank">
-    						<img src="" alt="Facebook icon">
+    						<img src="https://www.facebook.com/" alt="Facebook icon">
   					</a>
 					<a href="images/icon_pics/github.png" target="_blank">
     						<img src=""">
   					</a>
 					<a href="images/icon_pics/facebook.png" target="_blank"></a>
-					<a href="https://github.com/weigez11" <img src="images/icon_pics/github.png"></a>
+					<a href="https://github.com/weigez11" <img src="images/icon_pics/github.png" target="_blank"></a>
 					<a href="https://github.com/weigez11" class="icon brands fa-github"><span class="label">GitHub</span></a>
 				</div>
 
