--- a/index.html
+++ b/index.html
@@ -109,14 +109,9 @@
 							</article>
 					</div>	
 				<div style="position: fixed; bottom: 0; right: 0;">
-  					<a href="images/icon_pics/facebook.png" target="_blank">
-    						<img src="https://www.facebook.com/" alt="Facebook icon">
-  					</a>
-					<a href="images/icon_pics/github.png" target="_blank">
-    						<img src=""">
-  					</a>
-					<a href="images/icon_pics/facebook.png" target="_blank"></a>
-					<a href="https://github.com/weigez11" <img src="images/icon_pics/github.png" target="_blank"></a>
+					<a href="https://twitter.com/" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
+					<a href="https://www.facebook.com/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+					<a href="https://www.instagram.com/" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
 					<a href="https://github.com/weigez11" class="icon brands fa-github"><span class="label">GitHub</span></a>
 				</div>
 
