--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<title>WeiGeJt SY_L Blog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="keywords" content="weige,weigejt,WeiGeJt,WeiGeJt SY_L Blog" />
+		<meta name="description" content="zzw blog，记录学习生活经历感悟" />
+		<meta name="author" content="weige" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link  href="images/favicon.ico"  rel="shortcut icon" type="image/x-icon" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
