--- a/404.html
+++ b/404.html
@@ -32,6 +32,8 @@ body {
     <tbody>
       <tr>
         <td class="c">The requested URL was not found on this server.</td>
+        <td class="c">在此服务器上找不到请求的 URL。</td>    
+        <td class="c">-----------------------------------send by ZZW</td>     
       </tr>
     </tbody>
   </table>
