--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<ul>	
 								<li><a href="#timeline">时间轴</a></li>
 								<li><a href="#study">学习</a></li>
-								<li><a href="life">生活</a></li>
+								<li><a href="#life">生活</a></li>
 								<li><a href="/play">玩耍</a></li>
 								<li><a href="#contact">联系我</a></li>
 								
