--- a/404.html
+++ b/404.html
@@ -27,16 +27,9 @@ body {
 </head>
 <body>
 <div align="center">
-  <h2><span class="t">404 Not Found</span></h2>
-  <table border="0" cellpadding="8" cellspacing="0" width="460">
-    <tbody>
-      <tr>
-        <td class="c">The requested URL was not found on this server.</td>
-        <td class="c">在此服务器上找不到请求的 URL。</td>    
-        <td class="c">-----------------------------------send by ZZW</td>     
-      </tr>
-    </tbody>
-  </table>
+  <h1><span class="t">404 Not Found</span></h1>
+  <h1><span class="t">在此服务器上找不到请求的 URL</span></h1>
+  <h3><span class="t">--------------------------send by ZZW</span></h3>      
 </div>
 </body>
 </html>
