--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
 							<article id="study">
 								<h2 class="major">学习</h2>
 								<h3>寒假学习目标：</h3>
-								<p>1、51单片机入门教程江科协的看完并真正理解并能应用；<br>2、SolidWorks学习，能够做出一个有难度的物体出来；<br>3、学英语，坚持记单词，做试卷，听听力，争取能听懂YouTube上的英文教学视频。</p>
+								<p>1、学英语:坚持记单词，做试卷，听VOA新闻，听YouTube上外国人讲的SolidWorks教学视频。<br>
+								   2、SolidWorks学习：每天至少要跟着YouTube上的教学视频做一个看起来有点难度的模型，并在练习中积累经验与不足；<br>
+								   3、51单片机学习：入门教程江科协的看完并真正理解并能应用；<br>
+								   4、扩展学习：学习html，我的要求是：不要求从零写出一个网页来，只需打开开发者工具能看懂里面的内容，并利用所学的html知识将我的博客网页给完善一下就好了。</p>
 								<span class="image main"><img src="images/pic1_01.jpg" alt="" style="width: 100%;"/></span>
 								<p>莫等闲，白了少年头，空悲切。--<a href="https://baike.baidu.com/item/%E5%B2%B3%E9%A3%9E/127844" target="_blank">岳飞</a></p>
 								<span class="image main"><img src="images/pic1_02.jpg" alt="" style="width: 100%;"/></span>
