--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<article id="study">
 								<h2 class="major">学习</h2>
 								<h3>寒假学习目标：</h3>
-								<p>1、学英语:坚持记单词，做试卷，听VOA新闻，听YouTube上外国人讲的SolidWorks教学视频。<br>
+								<p>1、学英语:坚持记单词，做试卷，听<a href="https://baike.baidu.com/item/%E7%BE%8E%E5%9B%BD%E4%B9%8B%E9%9F%B3%E5%B9%BF%E6%92%AD%E7%94%B5%E5%8F%B0/13681428" target="_blank">VOA</a>新闻，听<a href="https://baike.baidu.com/item/YouTube/6497100" target="_blank">YouTube</a>上外国人讲的SolidWorks教学视频。<br>
 								   2、SolidWorks学习：每天至少要跟着YouTube上的教学视频做一个看起来有点难度的模型，并在练习中积累经验与不足；<br>
 								   3、51单片机学习：入门教程江科协的看完并真正理解并能应用；<br>
 								   4、扩展学习：学习html，我的要求是：不要求从零写出一个网页来，只需打开开发者工具能看懂里面的内容，并利用所学的html知识将我的博客网页给完善一下就好了。</p>
