--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								<span class="image main"><img src="images/pic1_01.jpg" alt="" style="width: 100%;"/></span>
 								<p>莫等闲，白了少年头，空悲切。--<a href="https://baike.baidu.com/item/%E5%B2%B3%E9%A3%9E/127844" target="_blank">岳飞</a></p>
 								<span class="image main"><img src="images/pic1_02.jpg" alt="" style="width: 100%;"/></span>
-								<p>“You can overcome anything, if and only if you love something enough.”（你可以克服任何事情，如果且只要你夠熱愛一件事。）--<a href="https://baike.baidu.com/item/%E5%88%A9%E6%98%82%E5%86%85%E5%B0%94%C2%B7%E6%A2%85%E8%A5%BF/3965248" target="_blank">Lionel Messi</a>, Soccer Player</p>
+								<p>“You can overcome anything, if and only if you love something enough.”（你可以克服任何事情，如果且只要你夠熱愛一件事。）--<a href="https://baike.baidu.com/item/%E5%88%A9%E6%98%82%E5%86%85%E5%B0%94%C2%B7%E6%A2%85%E8%A5%BF/3965248" target="_blank">利昂内尔·梅西</a></p>
 								<ul class="icons">
 									<li><a href="https://twitter.com/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -86,9 +86,9 @@
 							<article id="life">
 								<h2 class="major">生活</h2>
 								<span class="image main"><img src="images/pic2_01.jpg" alt="" style="width: 100%;"/></span>
-								<p>生活最沉重的负担不是工作，而是无聊。--<a href="https://baike.baidu.com/item/%E7%BD%97%E6%9B%BC%C2%B7%E7%BD%97%E5%85%B0/802941" target="_blank">Romain Rolland</a></p>
+								<p>生活最沉重的负担不是工作，而是无聊。--<a href="https://baike.baidu.com/item/%E7%BD%97%E6%9B%BC%C2%B7%E7%BD%97%E5%85%B0/802941" target="_blank">罗曼·罗兰</a></p>
 								<span class="image main"><img src="images/pic2_02.jpg" alt="" style="width: 100%;"/></span>
-								<p>Cease to struggle and you cease to live.（生命不止,奋斗不息）--<a href="https://baike.baidu.com/item/%E6%89%98%E9%A9%AC%E6%96%AF%C2%B7%E5%8D%A1%E8%8E%B1%E5%B0%94/11029383" target="_blank">Thomas Carlyle</a></p>
+								<p>Cease to struggle and you cease to live.（生命不止,奋斗不息）--<a href="https://baike.baidu.com/item/%E6%89%98%E9%A9%AC%E6%96%AF%C2%B7%E5%8D%A1%E8%8E%B1%E5%B0%94/11029383" target="_blank">托马斯·卡莱尔</a></p>
 								<ul class="icons">
 									<li><a href="https://twitter.com/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
