--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<h4> Blog Post 3</h4>
           							<p><small > Posted on January 1, 2023</small></p>
 								<p>从寒假回家开始，我就一直坚持学英语，每天早上记单词，听VOA，做阅读理解。最近，我又尝试了一中新的方法学习英语：每做完一篇阅读理解并疏通了全文的知识点后，我就开始朗诵全文，可能是我英语底子太差了，读到一篇文章顺畅花了一个小时，期间把读得不准确的、不会读得单词标注出来。但读得依旧是没得灵魂的，像什么一段长的句子应该在什么地方停顿一下，还有什么句中相邻的单词因为某种原因需要变读音等等，这些我都完成的一塌糊涂。显然，这些方面都是我今后要注意的地方。<br>
-								对了，我今天学英语花了有5个小时了吧（最近应该都是画了3个小时以上），没想到学英语跟学建模一样会这么耗时间。<br>But it doesn't matter. It should be.</p>
+								对了，我今天学英语花了有5个小时了吧（最近应该都是花了3个小时以上），没想到学英语跟学建模一样会这么耗时间。<br>But it doesn't matter. It should be.</p>
 								
 								<ul class="icons">
 									<li><a href="https://twitter.com/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
