--- a/index.html
+++ b/index.html
@@ -132,8 +132,35 @@
 					<a href="https://www.instagram.com/" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
 					<a href="https://github.com/weigez11" class="icon brands fa-github"><span class="label">GitHub</span></a>
 				</div>
+				
+				<div style="position: fixed; bottom: 0; left: 0;">
+        				<audio id="player" controls>
+            				<source src="audio/qifengle.mp3" type="audio/mpeg">
+           				 Your browser does not support the audio element.
+        				</audio>
 
-														
+					<br>
+					<select id="song-select" onchange="changeSong(0)">
+					    <option value="audio/qifengle.mp3">起风了</option>
+					    <option value="audio/dayuezaidongji.mp3">大约在冬季</option>
+					    <option value="audio/youmeiyourcgsn.mp3">有没有人曾告诉你</option>
+					</select>
+				 /div>
+				 	<script>
+						var currentSongIndex;
+						function changeSong(offset) {
+						    if (offset === 0) {
+							// Change song based on selection in song-select dropdown list
+							var songSelect = document.getElementById('song-select');
+							var songUrl = songSelect.value;
+						    } 
+						    var player = document.getElementById('player');
+						    player.src = songUrl;
+						    player.play();
+						}
+				   	 </script>
+
+
 
 				<!-- Footer -->
 					<footer id="footer">
