--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 					    <option value="audio/dayuezaidongji.mp3">大约在冬季</option>
 					    <option value="audio/youmeiyourcgsn.mp3">有没有人曾告诉你</option>
 					</select>
-				 /div>
+				 </div>
 				 	<script>
 						var currentSongIndex;
 						function changeSong(offset) {
