--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
 							</article>
 						
 					</div>	
-					<div style="position: fixed; bottom: 0; center: 0;">
+					<br>	
+					<div>
 						<audio id="player" controls>
 							<source src="audio/qifengle.mp3" type="audio/mpeg">
 							 Your browser does not support the audio element.
