--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								<li><a href="#study">学习</a></li>
 								<li><a href="#life">生活</a></li>
 								<li><a href="#play">玩耍</a></li>
-								<li><a href="#music">音乐</a></li>
+								<li><a href="#connect">联系我</a></li>
 								
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
