--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
 								<p>从寒假回家开始，我就一直坚持学英语，每天早上记单词，听VOA，做阅读理解。最近，我又尝试了一中新的方法学习英语：每做完一篇阅读理解并疏通了全文的知识点后，我就开始朗诵全文，可能是我英语底子太差了，读到一篇文章顺畅花了一个小时，期间把读得不准确的、不会读得单词标注出来。但读得依旧是没得灵魂的，像什么一段长的句子应该在什么地方停顿一下，还有什么句中相邻的单词因为某种原因需要变读音等等，这些我都完成的一塌糊涂。显然，这些方面都是我今后要注意的地方。<br>
 								对了，我今天学英语花了有5个小时了吧（最近应该都是花了3个小时以上），没想到学英语跟学建模一样会这么耗时间。<br>But it doesn't matter. It should be.</p>
 								
+								<h4> Blog Post 4</h4>
+          							<p><small > Posted on January 5, 2023</small></p>
+								<p>昨晚睡觉前我在床上想事情，想着想着：我要为我这个寒假总结做一个可视化界面。所以，今天我就到bilibili上找相关的视频教程，意外的找到了一个非常适合我目前学习水平的教学视频，我目前前端知识学过一些，但真要我动手写一个出来，还真不会，但况且我就知道一丢丢的前端知识，每看一个源码，我都只能找到几个熟悉的身影。但是，这个视频老师全程手敲代码，每一个步骤都讲得非常清楚，我就在项目文件中写一些注释，能够理解这些代码就好了，没必要手敲。</p>
+								<span class="image main"><img src="images/timeline_04.png" alt="" style="width: 100%;"/></span>
 								<ul class="icons">
 									<li><a href="https://twitter.com/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
