--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 								<p>1、学英语:坚持记单词，做试卷，听<a href="https://baike.baidu.com/item/%E7%BE%8E%E5%9B%BD%E4%B9%8B%E9%9F%B3%E5%B9%BF%E6%92%AD%E7%94%B5%E5%8F%B0/13681428" target="_blank">VOA</a>新闻，听<a href="https://baike.baidu.com/item/YouTube/6497100" target="_blank">YouTube</a>上外国人讲的SolidWorks教学视频。<br>
 								   2、SolidWorks学习：每天至少要跟着YouTube上的教学视频做一个看起来有点难度的模型，并在练习中积累经验与不足；<br>
 								   3、<a href="https://baike.baidu.com/item/51%E5%8D%95%E7%89%87%E6%9C%BA/5344633" target="_blank">51单片机</a>学习：入门教程江科协的看完并真正理解并能应用；<br>
-								   4、扩展学习：学习<a href="https://baike.baidu.com/item/html/97049" target="_blank">html</a>，我的要求是：不要求从零写出一个网页来，只需打开开发者工具能看懂里面的内容，并利用所学的html知识将我的博客网页给完善一下就好了。</p>
+								   4、扩展学习：学习<a href="https://baike.baidu.com/item/%E6%95%B0%E6%8D%AE%E5%8F%AF%E8%A7%86%E5%8C%96/1252367" target="_blank">数据可视化</a>。利用它制作一个可视化展板：展示这个寒假里我的时间花费在哪些地方了，以及从这些时间里头分析出一些有用的信息拿来展示，并做总结。</p>
 								<span class="image main"><img src="images/pic1_01.jpg" alt="" style="width: 100%;"/></span>
 								<p>莫等闲，白了少年头，空悲切。--<a href="https://baike.baidu.com/item/%E5%B2%B3%E9%A3%9E/127844" target="_blank">岳飞</a></p>
 								<span class="image main"><img src="images/pic1_02.jpg" alt="" style="width: 100%;"/></span>
