--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								<span class="image main"><img src="images/timeline_04.png" alt="" style="width: 100%;"/></span>
 								<h4> Blog Post 5</h4>
           							<p><small > Posted on January 7, 2023</small></p>
-								<p>今天下午弄这个什么数据可视化，弄的我头大，明明视频里是这个干的，没一点事，在我这就给你出各种问题，弄的我好好地兴趣被这屁东西给搅乱了。但是，这个没弄出来就没弄出来，我还是要继续做我其他的事，不能被这屁东西给影响了。
+								<p>今天下午弄这个什么数据可视化，弄的我头大，明明视频里是这个干的，没一点事，在我这就给你出各种问题，弄的我好好地心情被这东西给搅没了。但是，这个没弄出来就没弄出来，我还是要继续做我其他的事，不能被这东西给影响了。
 								</p>
 								
 								<ul class="icons">
