--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 					</div>	
 					<br>	
 					<div>
-						<audio id="player" controls>
+						<audio id="player" controls loop="loop">
 							<source src="audio/qifengle.mp3" type="audio/mpeg">
 							 Your browser does not support the audio element.
 						</audio>
