--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@
 						<!-- Connect -->
 							<article id="connect">
 								<h2 class="major">联系我</h2>
-	
+								<h4> 中文简历</h4>
+								<span class="image main"><img src="images/chinese_resume.png" alt="" style="width: 100%;"/></span>
+								<h4> 英文简历</h4>
+								<span class="image main"><img src="images/english_resume.png" alt="" style="width: 100%;"/></span>
 								<ul class="icons">
 									<li><a href="https://twitter.com/" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
