--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 						<br>
 						<select id="song-select" onchange="changeSong(0)">
 						    <option value="audio/qifengle.mp3">起风了</option>
-						    <option value="audio/dayuezaidongji.mp3">大约在冬季</option>
-						    <option value="audio/youmeiyourcgsn.mp3">有没有人曾告诉你</option>
+						    <option value="audio/shinian.flac">十年</option>
+						    <option value="audio/yicijiuhao.flac">一次就好</option>
 						</select>
 					 </div>
 					<script>
